<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuestActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questNameTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A69F9F"
        android:padding="5dp"
        android:text="@string/tytulZadania"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/taskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nazwaZadania"/>

        <Button
            android:id="@+id/addQuestBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dodaj" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewQuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/refreshBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odswiez" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/notesBTtask"
            android:layout_width="134dp"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="goNote"
            android:text="@string/notatki"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/questsBTquest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/questsBTtask"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="right"
            android:layout_marginStart="116dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="goQuest"
            android:text="@string/lista"
            android:textAllCaps="false"
            android:textColor="#FFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>